# rocket-app

./: .env  Cargo.toml
migrations/2023-02-24-194529_create_rustaceans/: up.sql
src/: auth.rs  catchs.rs  main.rs  rustaceans.rs  schema.rs
