[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# API
rocket = { version = "0.5.0-rc", features = ["json"] }

# Serielize & Deserialize
serde_json = "1.0"

# Decoded Auth
base64 = "0.20"

# Database
diesel = { version = "1.4", features = ["mysql", "r2d2"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc"
default-features = false
features = ["diesel_mysql_pool"]